--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@ header {
   font-weight: bold;
 }
 
-span {
-  display: inline-block;
-}
-
 .logo {
   color: MediumAquamarine;
 }
 
-.header_p p {
+.header_p {
   display: inline;
   margin-left: 20px;
   color: MediumAquamarine;
+}
+
+span {
+  display: inline-block;
 }
