Add list to span.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ header {
   color: MediumAquamarine;
 }
 
+.logo span {
+  color: MediumAquamarine;
+}
 
-span {
+
+li {
   display: inline-block;
 }
